--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,8 +17,8 @@ jobs:
       
       - name: Setup Git
         run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
+          git config --global user.name 'yaominghua1981'
+          git config --global user.email 'minghuayao1981@gmail.com'
       
       - name: Push to GitCode
         env:
